--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv=\"Refresh\" content=\"2; url=https://www.notion.so/mybackpages/361b9aa066ea46ae81b8e674e1eef080" />
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5;url=https://www.notion.so/mybackpages/361b9aa066ea46ae81b8e674e1eef080">
+  </head>
+  </html>
